syntax = "proto3";

package shopnexus;

option go_package = "shopnexus-go-service/gen/pb";

enum PaymentMethod {
  PAYMENT_METHOD_UNSPECIFIED = 0;
  CASH = 1;
  MOMO = 2;
  VNPAY = 3;
}

// CREATE PAYMENT
message CreatePaymentRequest {
  PaymentMethod payment_method = 1;
  string address = 2;
}

message CreatePaymentResponse {
  string payment_id = 1;
  string payment_url = 2;
}

service Payment {
  rpc Create(CreatePaymentRequest) returns (CreatePaymentResponse) {}
}